<resources>
    <string name="app_name">DonATE</string>
    <string name="app_logo">Logo of the app</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="signup_tf">No account yet? Create one</string>
    <string name="login_btn">Login</string>
    <string name="regstr_name">Name</string>
    <string name="regstr_email">Email</string>
    <string name="regstr_pwd">Password</string>
    <string name="regstr_rpwd">Re-enter Password</string>
    <string name="frgt_pwd">Forgot Password?</string>
    <string name="rgstr_mob">Mobile Number (10 digits)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="regstr_btn">CREATE ACCOUNT</string>
    <string name="login_lnk">Already a member? Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="donate_btn">Donate</string>
    <string name="receive_btn">receive</string>
    <string name="people_u_can_feed">People u can feed :</string>
    <string name="dialog_fire_missiles">hello</string>
    <string name="cancel">cancel</string>
    <string name="fire">fire</string>
    <string name="donate_org">Organizations you can donate to :</string>
    <string name="done">Done</string>
    <string name="ngoexample">Fellowship Of Physically Handicapped</string>
    <string name="ngoAddressExample">Dadar, Pune, Mumbai, Maharashtra</string>
    <string name="org_donate_list">Organizations you can donate to :</string>
    <string name="title_activity_maps_location_user">Map</string>
    <string name="your_name">Your Name</string>
    <string name="mail_id">Your Email-Id</string>
    <string name="mobile_number">Your Mobile Number</string>
    <string name="amount">Enter Amount</string>
    <string name="description">Description</string>
    <string name="pay">Pay</string>
    <string name="title_activity_my_donations">MyDonations</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="contact_donate">noReplyDonateApp@gmail.com</string>
    <string name="rgstr_city">City</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
